static/css/style.css
html {
  scroll-behavior: smooth;
}

body {
  font-family: "Inter", sans-serif;
  line-height: 1.6;
  color: #333;
  background-color: rgb(246, 244, 244);
}

.carousel {
  position: relative;
  overflow: hidden;
}
.carousel-track {
  display: flex;
  transition: transform 0.5s ease-in-out;
}
.carousel-slide {
  min-width: 100%;
}
.carousel-indicator {
  transition: all 0.3s ease;
}
.carousel-indicator.active {
  transform: scale(1.5);
  background-color: #3b82f6;
}
@media (max-width: 768px) {
  .carousel {
    width: 100%;
  }
}

.card {
  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}

.login,
.signup {
  /* background-image: url("../image/login_bg.png"); */
  background-image: url("");
  background-blend-mode: darken;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  min-height: 100vh;
}

/* Hide default scrollbar */
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}
.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

